# cipereusz

./: .dockerignore  .gitignore  CMakeLists.txt  Config.h  Dockerfile  MarkovChains.cpp  MarkovChains.h  MarkovChainsNGram.cpp  MarkovChainsNGram.h  README.md  Utils.h  cfg.json  docker-compose.yml  dpp_commands.cpp  dpp_commands.h  entrypoint.sh  main  main.cpp
.github/workflows/: build.yml
